[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/interface/TButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/interface/GameOver.gd" type="Script" id=2]
[ext_resource path="res://assets/sprite/interface/menu_selected_button.png" type="Texture" id=3]
[ext_resource path="res://assets/sprite/interface/menu_normal_button.png" type="Texture" id=4]
[ext_resource path="res://assets/sprite/interface/quit_selected_button.png" type="Texture" id=5]
[ext_resource path="res://assets/sprite/interface/quit_normal_button.png" type="Texture" id=6]

[node name="GameOver" type="Node2D"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 180.0
margin_right = 480.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 14.0
text = "GAME OVER"
align = 1

[node name="Menu" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 190.0
margin_top = 18.0
margin_right = 290.0
margin_bottom = 38.0
size_flags_horizontal = 6
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 3 )
scene = "res://scenes/interface/Menu.tscn"

[node name="Quit" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 190.0
margin_top = 42.0
margin_right = 290.0
margin_bottom = 62.0
size_flags_horizontal = 6
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 5 )
[connection signal="tree_entered" from="." to="." method="on_gameover_tree_entered"]
[connection signal="send_scene" from="VBoxContainer/Menu" to="." method="on_menu_send_scene"]
[connection signal="send_scene" from="VBoxContainer/Quit" to="." method="on_quit_send_scene"]
